# MeridianPy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: Meridian.py
src/meridian/: __init__.py  meridian.py
