[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "Meridian"
description = "Meridianの送受信を行うツール"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "asyncio",
]
authors = [
  {name = "Meridian Team"}
]
dynamic = ["version"]

[project.urls]
Homepage = "https://ninagawa123.github.io/Meridian_info/"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools_scm]
write_to = "src/_version.py"
