[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian"
description = "Meridianの送受信を行うツール"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "asyncio",
]
authors = [
  {name = "Meridian Team"}
]
dynamic = ["version"]

[project.urls]
Homepage = "https://ninagawa123.github.io/Meridian_info/"

[tool.poetry]
packages = [{include = "meridian", from = "src"}]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools_scm]
write_to = "meridian/_version.py"
